<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/order_details_payment_type"
        app:titleCentered="true"
        app:titleTextColor="@color/ioka_color_text_primary" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/ui_color_background_secondary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/vCardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnGooglePay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="16dp"
                    app:srcCompat="@drawable/ic_google_pay_mark" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/order_details_payment_type_google_pay"
                    android:textAppearance="@style/PrimaryTextView.16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckGooglePay"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_selected_check" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardBackgroundColor="@color/ui_color_background_secondary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnPayWithCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:foregroundGravity="center_vertical"
                app:srcCompat="@drawable/ic_card" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/order_details_payment_type_with_card"
                android:textAppearance="@style/PrimaryTextView.16" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCheckPayWithCard"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_selected_check" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/ui_color_background_secondary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btnPayWithCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:tint="@color/ioka_color_text_secondary"
                app:srcCompat="@drawable/ic_cash" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/order_details_payment_type_with_cash"
                android:textAppearance="@style/PrimaryTextView.16" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCheckCash"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_selected_check" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        style="@style/MainButton.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/common_save" />

</androidx.appcompat.widget.LinearLayoutCompat>