<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/order_details_toolbar_title"
        app:titleCentered="true"
        app:titleTextAppearance="@style/MediumPrimaryTextView.18" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/SecondaryTextView.14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vToolbar"
        tools:text="Набор керамики" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivItemImage"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvItemName"
        app:srcCompat="@drawable/item_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/MediumPrimaryTextView.28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivItemImage"
        tools:text="148 490 ₸" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOrderInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/ui_color_background_secondary"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvPrice">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/text_secondary_color"
                    app:srcCompat="@drawable/ic_location" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/order_details_address"
                    android:textAppearance="@style/PrimaryTextView.16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/text_secondary_color"
                    app:srcCompat="@drawable/ic_forward" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="52dp"
                android:background="@color/ui_color_background" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/text_secondary_color"
                    app:srcCompat="@drawable/ic_time" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/order_details_time"
                    android:textAppearance="@style/PrimaryTextView.16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:tint="@color/text_secondary_color"
                    app:srcCompat="@drawable/ic_forward" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <kz.ioka.android.iokademoapp.presentation.cart.paymentType.SelectedPaymentTypeView
        android:id="@+id/vPaymentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/ui_color_background_secondary"
        app:layout_constraintTop_toBottomOf="@id/cvOrderInfo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueOrder"
        style="@style/MainButton.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cart_start_order"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/vProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ui_color_background_overlay_64"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order_details_processing"
                android:textAppearance="@style/MediumPrimaryTextView.18"
                android:textColor="@color/ioka_color_static_white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>