<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_color_background">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:title="@string/profile_toolbar_title"
            app:titleTextAppearance="@style/MediumPrimaryTextView.20" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    app:cardBackgroundColor="@color/ui_color_background_secondary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/btnSavedCards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/text_primary_color"
                            app:srcCompat="@drawable/ic_card" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_saved_cards_title"
                            android:textAppearance="@style/PrimaryTextView.16" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/ui_color_secondary"
                            app:srcCompat="@drawable/ic_forward" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/ui_color_background_secondary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/btnLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/text_primary_color"
                            app:srcCompat="@drawable/ic_language" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_language"
                            android:textAppearance="@style/PrimaryTextView.16" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCurrentLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="12dp"
                            android:textAppearance="@style/SecondaryTextView.16"
                            tools:text="Русский" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/ui_color_secondary"
                            app:srcCompat="@drawable/ic_forward" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="@color/ui_color_background_secondary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/vDarkModeContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:tint="@color/text_primary_color"
                            app:srcCompat="@drawable/ic_dark_mode" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_dark_mode"
                            android:textAppearance="@style/PrimaryTextView.16" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/switchDarkMode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            app:thumbTint="@color/text_primary_color" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/vProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AFFFFFFF"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>